syntax = "proto3";

package pb;

option go_package="github.com/BBitQNull/SSHoneyNet/pb/dispatcher/pb";

service CmdEcho {
    rpc Dispatcher(DispatcherRequest) returns (DispatcherResponse) {}
}

message DispatcherRequest {
    Script ast = 1;
}

message DispatcherResponse {
    string cmdresult = 1;
    int32 errcode = 2;
    string errmsg = 3;
}


message Script {
    repeated CommandLine lines = 1;
}

message CommandLine {
    repeated Command pipeline = 1;
    optional Redirection redir = 2;
}

message Command {
    string name = 1;
    repeated FlagWithValue flags = 2;
    repeated Argument args = 3;
}

message FlagWithValue {
    string name = 1;
    optional string value = 2;
}

message Argument {
    optional string value = 1;
}

message Redirection {
    string file = 1;
}