syntax = "proto3";

package pb;

option go_package = "SSHoneyNet/pb";

service EchoCmd {
    rpc EchoCommand (EchoCmdRequest) returns (EchoCmdResponse) {}
}

message CmdResult {
    string output = 1;
    uint32 exitcode = 2;
    string errmsg = 3;
    string log = 4;
    bool nextprompt = 5;
}
message EchoCmdRequest {
    CmdResult result = 1;
}

message EchoCmdResponse {
    bool iserr = 1;
}